fix(Popover): cropped arrow via clip-path (#1322)

--- a/packages/css/src/less/mixins/_alerts.less
+++ b/packages/css/src/less/mixins/_alerts.less
@@ -1,4 +1,5 @@
 @import (reference) '../mixins/_logical-properties.less';
+@import (reference) '../mixins/_arrows.less';
 
 .alert-variant(@background; @text-color; @text-hover) {
   background-color: @background;
@@ -23,55 +24,10 @@
   }
 }
 
-.arrow(@size: 10px) {
+.alert-arrow(@size: 10px) {
   position: relative;
   .arrow-pointer(@size);
+
+  clip-path: polygon(0% 0%, 0 100%, 100% 0);
   .arrow-positions(@size);
-}
-
-.arrow-pointer(@size: 10px) {
-  &::before {
-    content: ' ';
-    position: absolute;
-    display: block;
-    width: @size;
-    height: @size;
-    .left((2 * @size));
-
-    top: (@size / -2);
-    transform: rotate(45deg);
-    clip-path: polygon(0% 0%, 0 100%, 100% 0);
-    background-color: inherit;
-  }
-}
-
-.arrow-positions(@size: 10px) {
-  &.arrow-center::before {
-    .left(50%);
-
-    .margin(left, (@size / -2));
-  }
-
-  &.arrow-top::before {
-    top: (@size / -2);
-    bottom: auto;
-  }
-
-  &.arrow-left::before {
-    .left((2 * @size));
-
-    .right(auto);
-  }
-
-  &.arrow-right::before {
-    .left(auto);
-
-    .right((2 * @size));
-  }
-
-  &.arrow-bottom::before {
-    top: auto;
-    bottom: (@size / -2);
-    transform: rotate(225deg);
-  }
 }
